kubernetes/apps/base/arr-stack/radarr/ingress.yaml
# Radarr Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: arr-stack
  labels:
    app.kubernetes.io/name: radarr
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - radarr.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: radarr.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
